Compatibility with Java 9, add ValuedNode.name()